[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Screens.gd" type="Script" id=1]

[node name="Screens" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoseScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.960784, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/LoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "YOU LOSE"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LoseScreen/VBoxContainer"]
margin_right = 512.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/LoseScreen/VBoxContainer"]
margin_top = 152.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2"]
margin_left = 215.0
margin_top = 52.0
margin_right = 296.0
margin_bottom = 96.0

[node name="TryAgainButton" type="Button" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 81.0
margin_bottom = 20.0
text = "TRY AGAIN"

[node name="QuitButton" type="Button" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 81.0
margin_bottom = 44.0
text = "QUIT"

[node name="WinScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "YOU WIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/WinScreen/VBoxContainer"]
margin_right = 512.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/WinScreen/VBoxContainer"]
margin_top = 152.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinScreen/VBoxContainer/CenterContainer2"]
margin_left = 233.0
margin_top = 64.0
margin_right = 278.0
margin_bottom = 84.0

[node name="QuitButton2" type="Button" parent="CanvasLayer/WinScreen/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 45.0
margin_bottom = 20.0
text = "QUIT"
[connection signal="pressed" from="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/VBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/WinScreen/VBoxContainer/CenterContainer2/VBoxContainer/QuitButton2" to="." method="_on_QuitButton_pressed"]
